fix: first page layout bug

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ body {
 	font-size: 100%;
 	font-family: Gothic, system-ui, sans-serif;
 }
+
 h1 {
 	font-family: Gilroy, system-ui, sans-serif;
 	font-weight: 900;
@@ -536,7 +537,9 @@ label[for='raz']:hover,
 	max-width: 1000px;
 }
 #about {
-	display: block;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	position: relative;
 	width: 100%;
 	background-color: #fff;
@@ -1083,6 +1086,9 @@ footer {
 	#about_us {
 		width: 800px;
 		border: 4px solid #dda427;
+	}
+
+	.title4 #about_us {
 		margin-bottom: -200px;
 	}
 
